# disruptorC

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  bootstrap  configure.ac
m4/: ax_cflags_gcc_option.m4  ax_noop.m4
src/: Makefile.am  disruptor.h  disruptor_types.h  memsizes.c  pagesize.c
test/: Makefile.am  correctness.c  performance.c
