#  
#  Copyright (C) 2010-2012 by Sofie-Louise Maria Colding
#
#  All Rights Reserved.
#
# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved.  This file is offered as-is,
# without any warranty.

CWD = $(CURDIR)
MKDIR=/bin/mkdir
TAR=/bin/tar

SUBDIRS = test

ACLOCAL_AMFLAGS = -I m4

DISTCLEANFILES = aclocal.m4 intltool-extract intltool-merge intltool-update iconv-detect.c Makefile.in Makefile *.tar.gz $(CLEAN_IN_FILES)

